[package]
name = "nexus-response"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

description = """
Response builders and types for Nexus framework.
Nexus框架的响应构建器和类型。
Equivalent to: Spring ResponseEntity, @ResponseBody
"""

[lints]
workspace = true

[dependencies]
# HTTP types / HTTP类型 (Spring Web HTTP)
http.workspace = true
http-body.workspace = true

# Core types / 核心类型
nexus-core = { path = "../nexus-core" }

# Serialization / 序列化 (Spring Jackson JSON)
serde.workspace = true
serde_json.workspace = true

# Bytes / 字节
bytes.workspace = true

# Error handling / 错误处理 (Spring @ResponseStatus)
thiserror.workspace = true
anyhow.workspace = true

# Content types / 内容类型 (Spring MediaType, Content-Type)
mime = "0.3"
mime_guess = "2.0"

# Template engines / 模板引擎 (Spring Thymeleaf, FreeMarker)
tera = { workspace = true, optional = true }
askama = { workspace = true, optional = true }
handlebars = { workspace = true, optional = true }

# Utilities / 工具
indexmap.workspace = true

[features]
default = ["json"]
json = []
html = ["tera"]
xml = []
ssr = ["askama"]
handlebars = ["dep:handlebars"]
templates = ["tera", "askama", "handlebars"]
full = ["json", "html", "xml", "ssr", "templates"]

[dev-dependencies]
# Testing / 测试 (Spring Test)
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
