[package]
name = "nexus-response"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Response builders and types for Nexus framework.
Nexus框架的响应构建器和类型。
Equivalent to: Spring ResponseEntity, @ResponseBody
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["json"]
json = []
html = ["dep:tera"]
xml = []
ssr = ["dep:askama"]
handlebars = ["dep:handlebars"]
templates = ["dep:tera", "dep:askama", "dep:handlebars"]
full = ["json", "html", "xml", "ssr", "templates"]

[dependencies]
# HTTP types / HTTP类型 (Spring Web HTTP)
http = { workspace = true }
http-body = { workspace = true }

# Core types / 核心类型
nexus-core = { path = "../nexus-core" }

# Serialization / 序列化 (Spring Jackson JSON)
serde = { workspace = true }
serde_json = { workspace = true }

# Bytes / 字节
bytes = { workspace = true }

# Error handling / 错误处理 (Spring @ResponseStatus)
thiserror = { workspace = true }
anyhow = { workspace = true }

# Content types / 内容类型 (Spring MediaType, Content-Type)
mime = { workspace = true }
mime_guess = { workspace = true }

# Template engines / 模板引擎 (Spring Thymeleaf, FreeMarker)
tera = { workspace = true, optional = true }
askama = { workspace = true, optional = true }
handlebars = { workspace = true, optional = true }

# Utilities / 工具
indexmap = { workspace = true }

# Time / 时间 (Spring LocalDateTime)
chrono = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
# Testing / 测试 (Spring Test)
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
