[package]
name = "nexus-security"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Security framework for Nexus framework.
Nexus框架的安全框架。
Equivalent to: Spring Security (@PreAuthorize, @Secured, @RolesAllowed)
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Async runtime / 异步运行时
nexus-runtime = { path = "../nexus-runtime" }
nexus-http = { path = "../nexus-http" }

# HTTP / HTTP
http = { workspace = true }

# Authentication / 认证
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true }

# Serialization / 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling / 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async traits / 异步trait
async-trait = { workspace = true }
futures = { workspace = true }

# Time / 时间
chrono = { workspace = true }

# Base64 encoding / Base64编码
base64 = { workspace = true }
hex = { workspace = true }

# MD5 for token hashing
md-5 = { workspace = true }

# SHA2 for PBKDF2
sha2 = { workspace = true }

# Constant-time comparisons
subtle = { workspace = true }

# Logging / 日志
tracing = { workspace = true }

# Async runtime / 异步运行时 (for tokio::sync types)
tokio = { workspace = true, features = ["sync"] }

# Utilities / 工具
once_cell = { workspace = true }

[dev-dependencies]
# Testing / 测试
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
