# Nexus Starter - Spring Boot风格的自动配置 / Spring Boot-style Auto-Configuration
#
# 提供开箱即用的自动配置能力
# Provides out-of-the-box auto-configuration capabilities
#
# # Equivalent to Spring Boot Starters / 等价于 Spring Boot Starters
#
# - `nexus-starter` (web feature) → `spring-boot-starter-web`
# - `nexus-starter` (security feature) → `spring-boot-starter-security`
# - `nexus-starter` (data feature) → `spring-boot-starter-data-jpa`
# - `nexus-starter` (cache feature) → `spring-boot-starter-cache`
# - `nexus-starter` (full feature) → All features enabled
#
# # Quick Start / 快速开始
#
# ```toml
# [dependencies]
# nexus-starter = { version = "0.1", features = ["full"] }
# ```
#
# ```rust,no_run,ignore
# use nexus_starter::prelude::*;
#
# #[nexus_main]
# struct Application;
# ```

[package]
name = "nexus-starter"
version = "0.1.0"
description = "Spring Boot-style auto-configuration for Nexus framework"
documentation = "https://docs.rs/nexus-starter"
repository = "https://github.com/nexus-rs/nexus"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

[features]
default = ["core", "web"]

# 核心功能（始终启用）
core = ["nexus-macros", "dep:nexus-config", "dep:nexus-observability"]

# 可观测性（日志、追踪、指标）
observability = ["dep:nexus-observability"]

# Web 服务器
web = ["nexus-http", "nexus-router", "nexus-middleware"]

# 安全
security = ["nexus-security", "web"]

# 数据访问
data = ["nexus-data-rdbc", "nexus-tx"]

# 缓存
cache = ["nexus-cache"]

# 定时任务
schedule = ["nexus-schedule"]

# 监控端点
actuator = ["nexus-actuator"]

# 全功能
full = ["web", "security", "data", "cache", "schedule", "actuator"]

# 开发模式（包含测试支持）
dev = ["full"]

[dependencies]
# 框架核心
nexus-macros = { path = "../nexus-macros", optional = true }
nexus-config = { path = "../nexus-config", optional = true }
nexus-runtime = { path = "../nexus-runtime", optional = true }
nexus-observability = { path = "../nexus-observability", optional = true, features = ["nexus-format"] }

# Web
nexus-http = { path = "../nexus-http", optional = true }
nexus-router = { path = "../nexus-router", optional = true }
nexus-middleware = { path = "../nexus-middleware", optional = true }

# 其他模块
nexus-security = { path = "../nexus-security", optional = true }
nexus-data-rdbc = { path = "../nexus-data-rdbc", optional = true }
nexus-tx = { path = "../nexus-tx", optional = true }
nexus-cache = { path = "../nexus-cache", optional = true }
nexus-schedule = { path = "../nexus-schedule", optional = true }
nexus-actuator = { path = "../nexus-actuator", optional = true }

# 外部依赖
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
once_cell = { workspace = true }
num_cpus = "1.16"

# 配置解析
toml = "0.8"
serde_yaml = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
